--- a/panda/udemy_android_flo_app/app/src/main/res/layout/activity_song.xml
+++ b/panda/udemy_android_flo_app/app/src/main/res/layout/activity_song.xml
@@ -6,7 +6,7 @@
 
 
 
-
+    <!--week2 -->
 
             <ImageView
                 android:id="@+id/btn_palyer_setting"
@@ -266,21 +266,6 @@
         android:layout_marginTop="40dp"
         app:layout_constraintTop_toBottomOf="@+id/song_player_layout"
         app:layout_constraintEnd_toEndOf="parent" />
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
