--- a/리나/Flo/app/src/main/res/values/colors.xml
+++ b/리나/Flo/app/src/main/res/values/colors.xml
@@ -16,6 +16,12 @@
     <color name="select_color">#3f3fff</color>
     <color name="gray_color">#a8a8a8</color>
 
-    <color name="flo">#FFBB86FC</color>
+
+    <color name="flo">#3f3fff</color>
+    <color name="song_player">#3f3fff</color>
+    <color name="song_player_bg">#a8a8a8</color>
+    <color name="colorPrimaryGrey">#424242</color>
+
+
 
 </resources>
